<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name_title">StrictMode</string>
    <string name="app_name_subtitle">Lib</string>
    
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    
    <string name="about">About</string>
    <string name="about_version">Version:</string>
    <string name="about_developed_by">Developed by:</string>
    <string name="about_license">License:</string>     
    <string name="about_repo">Source:</string>    
    <string name="about_project">Project:</string>
    
    <string name="license">Apache v2.0</string>
    <string name="license_link">http://www.apache.org/licenses/LICENSE-2.0.html</string>
    <string name="repo">on github</string>
    <string name="repo_link">https://github.com/robomorphine/strictmode</string>
    <string name="author">Ievgenii Nazaruk</string>
    <string name="author_link">https://plus.google.com/u/0/105952273394105528735/posts</string>
    <string name="project">robomorphine</string>
    <string name="project_link">
        https://plus.google.com/u/0/b/110168732545954637172/110168732545954637172/posts
    </string>
    
    <string name="help">Help</string>
    <string name="help_text">
        This is help.
    </string>
    
</resources>